[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moteus_gui"
version = "0.4.1+tz"
description = "moteus brushless controller graphical user interfaces"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9, <4"
authors = [{name = "mjbots Robotic Systems", email = "info@mjbots.com"}]
keywords = ["moteus"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "moteus>=0.4.1,<0.5",
    "asyncqt>=0.8",
    "matplotlib>=3.9",
    "msvc-runtime; platform_system == 'Windows' and python_version < '3.12'",
    "PySide6>=6.6",
    "qtconsole>=5.6",
    "qtpy>=2.0.1",
    "scipy>=1.14",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/mjbots/moteus"

[project.scripts]
tview = "moteus_gui.tview:main"
moteus_fastgui = "moteus_gui.fastgui.gui_app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["moteus_gui", "moteus_gui.*"]

[tool.setuptools.package-data]
moteus_gui = ["tview_main_window.ui"]
